--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=3000
 
 # Database connection string
-DATABASE_URI=mongodb://127.0.0.1/payload-template-ecommerce
+DATABASE_URI=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.5
 
 # Used to encrypt JWT tokens
 PAYLOAD_SECRET=YOUR_SECRET_HERE
